fixed footer, trying to fix long username panel overflow

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -26,7 +26,7 @@ main {
   margin-top: 4em;
   display: block;
   transition: 200ms;
-  height:100%;
+  min-height:100%;
 }
 
 ul {
@@ -72,6 +72,7 @@ form label {
 .footer {
   height:15em;
   background-color:#282222;
+  clear:both !important;
 }
 
 .new-error {
